# bot-SixMans

./: .gitignore  .pre-commit-config.yaml  DevSetup-VSCode.md  README.md  Setup-VSCode.md  pyproject.toml  requirements-lock.txt
data/: data_example.json
sixMans/: __init__.py  embeds.py  enums.py  game.py  queue.py  scoreboard.py  sixMans.py  strings.py  types.py  utils.py  views.py
sixMans/models/: game.py  queue.py
sixMans/sixMansSplit/: functions.py  getsetCommands.py  leaderboardCommands.py  listeners.py  playerCommads.py  rankCommands.py  sixMansParent.py
sixMans/views/: __init__.py  cancel.py  captains.py  score.py  selfpick.py  vote.py
tests/: conftest.py  test_queue_bans.py  test_score_report.py  test_selfpick.py  test_vote.py
