[project]
name = "RSC-Discord-Bot"
version = "1.0.0"
requires-python = ">3.11"
dependencies = ["red-discordbot>=3.5.24"]

[tool.pytest.ini_options]
minversion = "7.0"
asyncio_mode = "auto"
python_files = ["test_*.py"]
env_files = [".env"]

[tool.mypy]
check_untyped_defs = true

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 200
indent-width = 4
exclude = ["data/"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "B", "C4", "SIM", "PTH", "TID", "ASYNC"]
ignore = ["B904", "SIM103", "SIM108"]

[tool.codespell]
ignore-words-list = "alltime"

[dependency-groups]
dev = ["pytest>=9.0.2"]
